--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project information
 site_name: neural-tree
-site_description: Neural Search 
+site_description: Neural Tree 
 site_author: Raphael Sourty
 site_url: https://raphaelsty.github.io/neural-tree
 
